--- a/server/workout_app/requirements.txt
+++ b/server/workout_app/requirements.txt
@@ -18,3 +18,6 @@ requests==2.25.1
 six==1.15.0
 sqlparse==0.4.1
 urllib3==1.26.4
+
+https://www.lfd.uci.edu/~gohlke/pythonlibs/#mysql-python
+C:\Users\MyGuest\Downloads\mysqlclient-1.4.6-cp38-cp38-win32.whl
