--- a/client/workout_app/package.json
+++ b/client/workout_app/package.json
@@ -14,6 +14,7 @@
     "material-icons": "^0.6.2",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
+    "vue-bootstrap-typeahead": "^0.2.6",
     "vue-toasted": "^1.1.28",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.0.0-beta.3"
